; ModuleID = '/home/carl/AnghaBench/freebsd/sys/compat/cloudabi/extr_cloudabi_clock.c_cloudabi_convert_clockid.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/compat/cloudabi/extr_cloudabi_clock.c_cloudabi_convert_clockid.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@CLOCK_MONOTONIC = common dso_local global i32 0, align 4
@CLOCK_PROCESS_CPUTIME_ID = common dso_local global i32 0, align 4
@CLOCK_REALTIME = common dso_local global i32 0, align 4
@CLOCK_THREAD_CPUTIME_ID = common dso_local global i32 0, align 4
@EINVAL = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i32*)* @cloudabi_convert_clockid to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @cloudabi_convert_clockid(i32 %0, i32* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  store i32 %0, i32* %4, align 4
  store i32* %1, i32** %5, align 8
  %6 = load i32, i32* %4, align 4
  switch i32 %6, label %19 [
    i32 131, label %7
    i32 130, label %10
    i32 129, label %13
    i32 128, label %16
  ]

7:                                                ; preds = %2
  %8 = load i32, i32* @CLOCK_MONOTONIC, align 4
  %9 = load i32*, i32** %5, align 8
  store i32 %8, i32* %9, align 4
  store i32 0, i32* %3, align 4
  br label %21

10:                                               ; preds = %2
  %11 = load i32, i32* @CLOCK_PROCESS_CPUTIME_ID, align 4
  %12 = load i32*, i32** %5, align 8
  store i32 %11, i32* %12, align 4
  store i32 0, i32* %3, align 4
  br label %21

13:                                               ; preds = %2
  %14 = load i32, i32* @CLOCK_REALTIME, align 4
  %15 = load i32*, i32** %5, align 8
  store i32 %14, i32* %15, align 4
  store i32 0, i32* %3, align 4
  br label %21

16:                                               ; preds = %2
  %17 = load i32, i32* @CLOCK_THREAD_CPUTIME_ID, align 4
  %18 = load i32*, i32** %5, align 8
  store i32 %17, i32* %18, align 4
  store i32 0, i32* %3, align 4
  br label %21

19:                                               ; preds = %2
  %20 = load i32, i32* @EINVAL, align 4
  store i32 %20, i32* %3, align 4
  br label %21

21:                                               ; preds = %19, %16, %13, %10, %7
  %22 = load i32, i32* %3, align 4
  ret i32 %22
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
